# Peach-E

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  authors.txt  conanfile.py  init.py  premake5.lua
Cool-People/BGFX-stuff/bimg/lib/: bimg.lib
Cool-People/BGFX-stuff/texturec/lib/: texturec.lib
Cool-People/SDL3/lib/: SDL3.lib
Cool-People/ggpo/lib/: GGPO.lib
Cool-People/libsodium/lib/: libsodium.lib
include/Peach-Core/: Peach-Core.hpp
include/Peach-Core/2D/: AnimationPlayer2D.h  CharacterController2D.h  CollisionPolygon2D.h  CollisionSegment2D.h  CollisionShape2D.h  Grid2D.h  Joint2D.h  ParallaxBackgroundPlayer.h  ParallaxLayer.h  PeachCamera2D.h  PeachNode2D.h  PeachTexture2D.h  PerlinNoise2D.h  Sprite2D.h  TileMap.h  TileSet.h  Transform2D.h
include/Peach-Core/2D/_modules_/: Geometry2D.h  Graphics2D.h  Physics2D.h  Rendering2D.h  SceneTreeItems2D.h
include/Peach-Core/General/: CommandQueue.h  LoadingQueue.h  OpenGLRenderer.h  PeachNode.h  PeachObject.h  PeachRenderer.h  Scene.h  ShaderProgram.h  nuklear_impl_bgfx.h  nuklear_impl_opengl3.h
include/Peach-Core/Language-Support/Lua/: LuaScriptManager.h
include/Peach-Core/Managers/: AudioManager.h  EventQueueManager.h  LogManager.h  PeachEngineDebugManager.h  PeachEngineManager.h  PluginManager.h  RenderingManager.h  ResourceLoadingManager.h  SceneTreeManager.h  ThreadPoolManager.h
include/Peach-Core/__modules__/: General.h  Managers.h  PeachCore2D.h
include/Peach-Core/_modules_/: General.h  Managers.h  PeachCore2D.h
include/Peach-Editor/Editor/: EditorObject.h  PeachConsole.h
include/Peach-Editor/Managers/: InternalLogManager.h  PeachEditorManager.h  PeachEditorRenderingManager.h  PeachEditorResourceLoadingManager.h  PeachEditorSettingsManager.h  ProjectExportManager.h
include/Peach-Engine/: DeserializationManager.h  PeachEngineManager.h
shaders/: viewport.fs  viewport.vs
src/: imgui.ini  main.cpp
src/.conan/: conan_install.bat
src/Language-Support/: PythonScriptComponent.cpp  PythonScriptComponent.h  ScriptComponent.cpp  ScriptComponent.h
src/Language-Support/Lua/: LuaScriptManager.cpp  LuaScriptManager.h
src/Language-Support/Princess/: BlockNode.cpp  BlockNode.h
src/Language-Support/Princess/Conditional-Blocks/: BreakBlockNode.cpp  ElseBlockNode.h  ElseIfBlockNode.h  ForEachBlockNode.cpp  ForLoopBlockNode.cpp  ForLoopBlockNode.h  IfBlockNode.cpp  IfBlockNode.h  WhileLoopBlockNode.h
src/Language-Support/Princess/Parsers/: ExecutionParser.cpp  ExecutionParser.h  PythonScriptParser.h  StringParser.h
src/Language-Support/Princess/Variable-Blocks/: DictionaryBlockNode.cpp  DictionaryBlockNode.h  ListBlockNode.cpp  ListBlockNode.h  VariableDefinitionBlockNode.cpp  VariableDefinitionBlockNode.h
src/Language-Support/Python/: PythonScriptManager.cpp  PythonScriptManager.h
src/Language-Support/Visual-Peach/: PythonInterpreter.cpp  PythonInterpreter.h  VisualPeachBlock.cpp  VisualPeachBlock.h
src/Language-Support/Visual-Peach/Conditional-Blocks/: ElseBlockNode.cpp  ElseBlockNode.h  ElseIfBlockNode.cpp  ElseIfBlockNode.h  ForLoopBlockNode.h  FunctionBlockNode.cpp  FunctionBlockNode.h  IfBlockNode.h  WhileLoopBlockNode.cpp  WhileLoopBlockNode.h
src/Language-Support/Visual-Peach/Parsers/: ExecutionParser.cpp  ExecutionParser.h  PythonScriptParser.cpp  PythonScriptParser.h  StringParser.cpp  StringParser.h
src/Language-Support/Visual-Peach/Python Scripts/: FunctionInspector.py
src/MinGE-core/Managers/: LogManager.cpp  ScheduleManager.cpp  ScheduleManager.h
src/Peach-Core/2D/: Curve2D.cpp  DirectionalLight2D.cpp  Grid2D.cpp  ParallaxBackgroundPlayer.cpp  ParallaxLayer.cpp  Path2D.cpp  PeachNode2D.cpp  PeachTexture2D.cpp  Sprite2D.cpp  TileMap.cpp  TileSet.cpp  Transform2D.cpp
src/Peach-Core/General/: OpenGLRenderer.cpp  PeachNode.cpp  PeachObject.cpp  PeachRenderer.cpp  ShaderProgram.cpp  imgui_impl_bgfx.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
src/Peach-Core/Language-Support/Lua/: LuaScriptManager.cpp
src/Peach-Core/Language-Support/Python/: PythonScriptComponent.cpp
src/Peach-Core/Managers/: AudioManager.cpp  InputManager.cpp  LogManager.cpp  PeachEngineManager.cpp  Physics2DManager.cpp  PluginManager.cpp  RenderingManager.cpp  ResourceLoadingManager.cpp  SceneTreeManager.cpp
src/Peach-E-Core/: PeachEConsole.cpp  PeachEConsole.h  PeachEObject.cpp  PeachEObject.h  main.cpp
src/Peach-E-Core/Managers/: InternalLogManager.cpp  InternalLogManager.h  SettingsManager.cpp  SettingsManager.h
src/Peach-E-Core/include/: Managers.h  PeachEConsole.h
src/Peach-E-Core/include/Managers/: EngineManager.h  InternalLogManager.h  PeachEditorRenderingManager.h  (+7 more)
src/Peach-E-Core/src/: PeachEConsole.cpp  PeachEObject.cpp
src/Peach-Editor/: main.cpp
src/Peach-Editor/Editor/: EditorObject.cpp  PeachConsole.cpp
src/Peach-Editor/Managers/: InternalLogManager.cpp  PeachEditorRenderingManager.cpp  PeachEditorResourceLoadingManager.cpp  PeachEditorSettingsManager.cpp
src/Peach-Engine/: PeachEngineDebugManager.cpp  PeachEngineManager.cpp  main.cpp
src/Peach-core/: GameObject.cpp  GameObject.h  Peach-core.hpp  PeachEObject.h  PeachEntity.cpp  PeachEntity.h
src/Peach-core/Entity-Components/: PeachComponent.cpp
src/Peach-core/Managers/: EngineManager.cpp  EngineManager.h  InputManager.h  LogManager.cpp  LogManager.h  PluginManager.cpp  PluginManager.h  RegistryManager.cpp  RegistryManager.h  RenderingManager.cpp  RenderingManager.h  SceneTreeManager.cpp  SceneTreeManager.h  ScheduleManager.cpp  ScheduleManager.h
src/Peach-core/include/: Managers.h
src/Peach-core/tests/: fragment.glsl  vertex.glsl
src/PeachE-core/: GameObject.h  PeachEObject.cpp
src/PeachE-core/Managers/: EngineManager.h  LogManager.h  Managers.h  Plugin.h  PluginManager.cpp  PluginManager.h  RegistryManager.cpp  RegistryManager.h  SceneTreeManager.cpp  SceneTreeManager.h  ScheduleManager.h
src/Princess/include/: BlockNode.h
src/Princess/src/: BlockNode.cpp  CatchBlockNode.cpp  PythonInterpreter.cpp  TryBlockNode.cpp
tests/: frag.fs  nuklear.fsh  nuklear.vsh  varying.def.sc  vert.vs
(+259 files in other folders)
